[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = """The Paillier cryptosystem is a public key crytosystem based on composite degree residuosity classes.
Paillier ciphertexts are homorphic in that the can be added.
"""
documentation = "https://docs.rs/paillier-rs"
edition = "2021"
license = "Apache-2.0"
name = "libpaillier"
readme = "README.md"
repository = "https://github.com/mikelodder7/paillier-rs"
version = "0.5.0"

[features]
default = ["rust"]
#gmp = ["unknown_order/gmp"]
#openssl = ["unknown_order/openssl"]
rust = ["unknown_order/rust"]
wasm = ["getrandom", "rand", "wasm-bindgen"]

[dependencies]
digest = "0.10"
getrandom = { version = "0.2.10", default-features = false, features = ["js"], optional = true }
rand = { version = "0.8", default-features = false, optional = true }
#serde = { version = "1.0", default-features = false}
#serde = { version = "1.0", default-features = false, features = ["serde_derive",]} # "alloc"] }
#serde-json-core = {version = "0.5.1" , default-features = false}


#serde_bare = { version = "0.5", default-features = false, features = ["alloc"] }
#unknown_order = { version = "0.6.0", default-features = false, features = ["rust"] }
unknown_order = { path = "../unknown_order", default-features = false} #, features = ["rust"] }

wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[dev-dependencies]
elliptic-curve = "0.12"
hex = "0.4"
k256 = { version = "0.11", features = ["arithmetic"] }
rand = "0.8"
multibase = "0.9"
sha2 = "0.10.6"
#serde_json = "1.0"
unicase = "2.6"
